0.037  2010-09-01
- added "perlito" command-line compiler and shell

0.035  2010-09-01
- moved compiler modules to "Perlito" namespace
- fixed range operator

0.034  2010-08-31
- documentation fix
- clean up perl5 warnings

0.033  2010-08-30
- new v6.pm module loader. 
  Written by Pawel Murias (pmurias++)
- "v6-perlito" now loads the Perlito compiler

Removed features:
- "v6-alpha" (Pugs::Compiler::Perl6) no longer supported
- "-e" command-line option no longer supported

0.032  2008-08-01
- pi, Inf, NaN
- more operators
- IO fixes

0.031  2008-07-30
- updated skipped tests

0.030  2008-07-29
- more operators

0.029  2008-07-28
- updated skipped tests

0.028  2008-07-27
- all(), any(), true(), not()
- improved smartmatching, given/when

0.027  2008-07-25
- more unicode tests are skipped

0.026  2008-07-25
- requires Pugs::Compiler::Rule 0.34 - better unicode support across perl distros

0.025  2008-07-24
- more tests
- several unicode tests are skipped, from cpan-testers feedback (I can't reproduce these failures - fglock)

0.024  2008-07-23
- many more tests added; the bigger tests are now split into smaller files

0.023  2008-07-21
- requires perl 5.8.6

0.022  2008-07-20
- implemented string interpolations \x[99] and \c[FOUR TEARDROP-SPOKED ASTERISK]
- fixed interpolated block in string
- q()
- updated test list in MANIFEST

0.021  2008-07-12

- fixed Test.pm compilation (added 'abs' function)
- Makefile.PL adds 'use v6-alpha' to standard tests

0.020  2007-08-26

- added Module::CompileV6 to MANIFEST (fixes broken CPAN distro)
- fixed warnings when using v6.pm from the command line with pipes

0.019  2007-08-25

- grammar - added prefix:<|>
- added: proto token rx { ... }
- fixed signature parsing
- added: Module::CompileV6
- fixed unicode << ... >> parsing
- allow [ ... ] as regex delimiter

- minor fix in quoted string parser
- Moose requires that attributes have an 'is ro' declaration; noticed by kolibrie++