@@ -144,6 +144,9 @@ if (typeof f_warn != 'function') {
     print("Warning: " + s + "\n")
   }
 }
+f_chr = function (o) {
+  return String.fromCharCode(o)
+}
 f_elems = function (o) {
   if ( o == null ) { return 1 };
   if ( typeof o.f_elems == 'function' ) { return o.f_elems() }
